Fix vertical map menu on mobile

--- a/src/assets/sass/_search_popups.scss
+++ b/src/assets/sass/_search_popups.scss
@@ -824,9 +824,9 @@
     }
   }
   .sidebar-menu-wrap {
-    position: relative;
+    position: absolute;
     right: 0;
-    top: 0;
+    top: 70px;
     bottom: 0;
     width: 100%;
     transform: rotate(0deg);
